Refactored list integrator, added comments and introduced new MS integrator

--- a/examples/odLangevin.ipynb
+++ b/examples/odLangevin.ipynb
@@ -36,6 +36,7 @@
    "outputs": [],
    "source": [
     "# Create list of particles to be integrated\n",
+    "# Note the particles in the list will be independent from the original ones.\n",
     "partlist = msmrd2.particleList([part1,part2])"
    ]
   },
@@ -57,15 +58,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Integrate solution and print positions\n",
+    "# Integrate only one particle and print position (with integrate)\n",
+    "t = 0\n",
+    "timesteps = 10\n",
+    "print('{:<10s}{:<15s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\"))\n",
+    "for i in range(timesteps):\n",
+    "    print('{:<10d}{:<15f}{:<40s}'.format(i, t, str(part1.position)))\n",
+    "    intg.integrate(part1)\n",
+    "    t += dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Integrate particle list and print positions (with integratelist)\n",
     "t = 0\n",
     "timesteps = 10\n",
     "print('{:<10s}{:<15s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Position2\"))\n",
     "for i in range(timesteps):\n",
     "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, t, str(partlist[0].position), str(partlist[1].position)))\n",
-    "    intg.integrate(partlist)\n",
+    "    intg.integrateList(partlist)\n",
     "    t += dt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
