Refactored particle class, odLangevinMarkovSwitch integrator and others

--- a/examples/CTMSM.ipynb
+++ b/examples/CTMSM.ipynb
@@ -17,14 +17,13 @@
    "outputs": [],
    "source": [
     "# Particle definition\n",
-    "pid = 0\n",
     "ptype = 1 # different types correspond to different MSM\n",
     "pstate = 0 # MSM sate\n",
     "D = 1\n",
     "Drot = 0\n",
     "position = np.array([1,1,1])\n",
     "orientation = np.array([0,1,0,0])\n",
-    "part1 = msmrd2.particle(pid, ptype, pstate, D, Drot, position, orientation)"
+    "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, position, orientation)"
    ]
   },
   {
