--- a/examples/odLangevin.ipynb
+++ b/examples/odLangevin.ipynb
@@ -17,16 +17,13 @@
    "outputs": [],
    "source": [
     "# Particle definition\n",
-    "pid = 0\n",
-    "ptype = 1 # different types correspond to different MSM\n",
-    "pstate = 0 # MSM sate\n",
     "D = 1\n",
-    "Drot = 0\n",
+    "Drot = 1\n",
     "position = np.array([1,1,1])\n",
     "position2 = np.array([2,2,2])\n",
-    "orientation = np.array([0,1,0,0])\n",
-    "part1 = msmrd2.particle(pid, ptype, pstate, D, Drot, position, orientation)\n",
-    "part2 = msmrd2.particle(pid, ptype, pstate, D, Drot, position2, orientation)"
+    "orientation = np.array([1,0,0,0])\n",
+    "part1 = msmrd2.particle(D, Drot, position, orientation)\n",
+    "part2 = msmrd2.particle(D, Drot, position2, orientation)"
    ]
   },
   {
@@ -49,7 +46,8 @@
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.001\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
-    "intg = msmrd2.odLangevin(dt,seed) "
+    "rotation = True\n",
+    "intg = msmrd2.odLangevin(dt, seed, rotation) "
    ]
   },
   {
@@ -58,12 +56,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Integrate only one particle and print position (with integrate)\n",
+    "# Integrate only one particle and print position and orientation\n",
     "t = 0\n",
     "timesteps = 10\n",
     "print('{:<10s}{:<15s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\"))\n",
     "for i in range(timesteps):\n",
-    "    print('{:<10d}{:<15f}{:<40s}'.format(i, t, str(part1.position)))\n",
+    "    print('{:<10d}{:<15f}{:<40s}{:<40s}'.format(i, t, str(part1.position), str(part1.orientation)))\n",
     "    intg.integrate(part1)\n",
     "    t += dt"
    ]
@@ -74,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Integrate particle list and print positions (with integratelist)\n",
+    "# Integrate particle list and print only positions (with integratelist)\n",
     "t = 0\n",
     "timesteps = 10\n",
     "print('{:<10s}{:<15s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Position2\"))\n",
