--- a/examples/odLangevinMarkovSwitch.ipynb
+++ b/examples/odLangevinMarkovSwitch.ipynb
@@ -53,7 +53,9 @@
     "dt = 0.05 # should be smaller than Gillespie inverse transition rates\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "rotation = True\n",
-    "intg = msmrd2.odLangevinMarkovSwitch(ctmsm, dt, seed, rotation) "
+    "intg = msmrd2.odLangevinMarkovSwitch(ctmsm, dt, seed, rotation) \n",
+    "# Create second integrator for list integration\n",
+    "intg2 = msmrd2.odLangevinMarkovSwitch(ctmsm, dt, seed, rotation) "
    ]
   },
   {
@@ -85,19 +87,12 @@
     "# Integrate particle list and print only positions (with integratelist)\n",
     "t = 0\n",
     "timesteps = 50\n",
-    "print('{:<10s}{:^10s}{:<40s}{:^15s}{:<30s}'.format(\"Iteration\", \"State 1\", \"Position 1\", \"State 2\", \"Position2\"))\n",
+    "print('{:<10s}{:^10s}{:<40s}{:^15s}{:<30s}'.format(\"Time\", \"State 1\", \"Position 1\", \"State 2\", \"Position2\"))\n",
     "for i in range(timesteps):\n",
-    "    print('{:<10d}{:^10d}{:<40s}{:^15d}{:<30s}'\n",
-    "          .format(i, partlist[0].state, str(partlist[0].position), partlist[1].state, str(partlist[1].position)))\n",
-    "    intg.integrateList(partlist)"
+    "    print('{:<10f}{:^10d}{:<40s}{:^15d}{:<30s}'\n",
+    "          .format(intg2.clock, partlist[0].state, str(partlist[0].position), partlist[1].state, str(partlist[1].position)))\n",
+    "    intg2.integrateList(partlist)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
