--- a/examples/odLangevin.ipynb
+++ b/examples/odLangevin.ipynb
@@ -61,9 +61,9 @@
     "# Integrate only one particle and print position and orientation\n",
     "t = 0\n",
     "timesteps = 10\n",
-    "print('{:<10s}{:<15s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\"))\n",
+    "print('{:<10s}{:<10s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Orientation 1\"))\n",
     "for i in range(timesteps):\n",
-    "    print('{:<10d}{:<15f}{:<40s}{:<40s}'.format(i, intg.clock, str(part1.position), str(part1.orientation)))\n",
+    "    print('{:<10d}{:<10f}{:<40s}{:<40s}'.format(i, intg.clock, str(part1.position), str(part1.orientation)))\n",
     "    intg.integrate(part1)"
    ]
   },
@@ -80,13 +80,6 @@
     "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, intg2.clock, str(partlist[0].position), str(partlist[1].position)))\n",
     "    intg2.integrateList(partlist)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
