--- a/examples/potentials.ipynb
+++ b/examples/potentials.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Define potential function\n",
-    "potential = msmrd2.gaussians3D(15,3,20,-1)"
+    "gauss3Dpot = msmrd2.gaussians3D(15,3,20,-1)"
    ]
   },
   {
@@ -30,7 +30,7 @@
    "source": [
     "# Evaluate at some point\n",
     "r = np.array([0.5,0.2,0.4])\n",
-    "potential.evaluate(r)"
+    "gauss3Dpot.evaluate(r)"
    ]
   },
   {
@@ -47,7 +47,7 @@
     "    f = np.zeros([100,100])\n",
     "    for i in range(100):\n",
     "        for j in range(100):\n",
-    "            f[i,j] = potential.evaluate([x[i],y[j],zcut])\n",
+    "            f[i,j] = gauss3Dpot.evaluate([x[i],y[j],zcut])\n",
     "    plt.contourf(f,np.arange(-15., 1., .2))\n",
     "    plt.clim(-8.,1.)\n",
     "    plt.colorbar()"
@@ -60,6 +60,28 @@
    "outputs": [],
    "source": [
     "interact(plot_contour,zcut=(-4,4,0.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Over-damped Langevin integrator definition\n",
+    "dt = 0.001\n",
+    "seed = 0 # Seed = -1 used random device as seed\n",
+    "rotation = True\n",
+    "intg = msmrd2.odLangevin(dt, seed, rotation) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intg.setPotential(gauss3Dpot)"
    ]
   },
   {
