--- a/examples/odLangevinMarkovSwitch.ipynb
+++ b/examples/odLangevinMarkovSwitch.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import msmrd2\n",
+    "import msmrd2.integrators as integrators\n",
     "import numpy as np"
    ]
   },
