Rewrote examples into refactored version

--- a/examples/odLangevinMarkovSwitch.ipynb
+++ b/examples/odLangevinMarkovSwitch.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "import msmrd2\n",
-    "import msmrd2.integrators as integrators\n",
     "import numpy as np"
    ]
   },
@@ -54,9 +53,9 @@
     "dt = 0.05 # should be smaller than Gillespie inverse transition rates\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "rotation = True\n",
-    "intg = msmrd2.odLangevinMarkovSwitch(ctmsm, dt, seed, rotation) \n",
+    "intg = msmrd2.integrators.odLangevinMarkovSwitch(ctmsm, dt, seed, rotation) \n",
     "# Create second integrator for list integration\n",
-    "intg2 = msmrd2.odLangevinMarkovSwitch(ctmsm, dt, seed, rotation) "
+    "intg2 = msmrd2.integrators.odLangevinMarkovSwitch(ctmsm, dt, seed, rotation) "
    ]
   },
   {
@@ -94,6 +93,13 @@
     "          .format(intg2.clock, partlist[0].state, str(partlist[0].position), partlist[1].state, str(partlist[1].position)))\n",
     "    intg2.integrateList(partlist)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
