--- a/examples/odLangevin.ipynb
+++ b/examples/odLangevin.ipynb
@@ -47,9 +47,9 @@
     "dt = 0.001\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "rotation = True\n",
-    "intg = msmrd2.odLangevin(dt, seed, rotation) \n",
+    "intg = msmrd2.integrators.odLangevin(dt, seed, rotation) \n",
     "# Second integrator to test list integration\n",
-    "intg2 = msmrd2.odLangevin(dt, seed, rotation) "
+    "intg2 = msmrd2.integrators.odLangevin(dt, seed, rotation) "
    ]
   },
   {
