--- a/examples/potentials.ipynb
+++ b/examples/potentials.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Define potential function\n",
-    "gauss3Dpot = msmrd2.gaussians3D(15,3,20,-1)"
+    "gauss3Dpot = msmrd2.potentials.gaussians3D(15,3,20,-1)"
    ]
   },
   {
@@ -68,28 +68,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Over-damped Langevin integrator definition\n",
+    "# How to load the potential into the over-damped Langevin integrator\n",
     "dt = 0.001\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "rotation = True\n",
-    "intg = msmrd2.odLangevin(dt, seed, rotation) "
+    "intg = msmrd2.integrators.odLangevin(dt, seed, rotation) \n",
+    "intg.setExternalPotential(gauss3Dpot)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "intg.setPotential(gauss3Dpot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
