Refactored external potential into template
And what a mess it was, but it is done!

--- a/examples/potentials.ipynb
+++ b/examples/potentials.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "# Evaluate at some point\n",
     "r = np.array([0.5,0.2,0.4])\n",
-    "gauss3Dpot.evaluate(r)"
+    "print(gauss3Dpot.evaluate(r),gauss3Dpot.force(r))"
    ]
   },
   {
@@ -75,6 +75,40 @@
     "intg = msmrd2.integrators.odLangevin(dt, seed, rotation) \n",
     "intg.setExternalPotential(gauss3Dpot)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dipolePot = msmrd2.potentials.dipole(1.0, np.array([0,0,1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intg.setExternalRodPotential(dipolePot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(dipolePot.evaluate(r,r),dipolePot.forceTorque(r,r))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
