Generalized pairpotentials using variadic templates

--- a/examples/potentials.ipynb
+++ b/examples/potentials.ipynb
@@ -100,7 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(dipolePot.evaluate(r,r),dipolePot.forceTorque(r,r))"
+    "u=np.array([1,0,0])\n",
+    "print(dipolePot.evaluate(r,u),dipolePot.forceTorque(r,u))"
    ]
   },
   {
