Added support for bodytype in particle class

--- a/examples/CTMSM.ipynb
+++ b/examples/CTMSM.ipynb
@@ -21,9 +21,10 @@
     "pstate = 0 # MSM sate\n",
     "D = 1\n",
     "Drot = 0\n",
+    "bodytype = 'point'\n",
     "position = np.array([1,1,1])\n",
     "orientation = np.array([0,1,0,0])\n",
-    "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, position, orientation)"
+    "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, bodytype, position, orientation)"
    ]
   },
   {
