--- a/examples/odLangevin.ipynb
+++ b/examples/odLangevin.ipynb
@@ -19,11 +19,12 @@
     "# Particle definition\n",
     "D = 1\n",
     "Drot = 1\n",
+    "bodytype = 'rigidbody'\n",
     "position = np.array([1,1,1])\n",
     "position2 = np.array([2,2,2])\n",
     "orientation = np.array([1,0,0,0])\n",
-    "part1 = msmrd2.particle(D, Drot, position, orientation)\n",
-    "part2 = msmrd2.particle(D, Drot, position2, orientation)"
+    "part1 = msmrd2.particle(D, Drot, bodytype, position, orientation)\n",
+    "part2 = msmrd2.particle(D, Drot, bodytype, position2, orientation)"
    ]
   },
   {
@@ -34,7 +35,7 @@
    "source": [
     "# Create list of particles to be integrated\n",
     "# Note the particles in the list will be independent from the original ones.\n",
-    "partlist = msmrd2.particleList([part1,part2])"
+    "partlist = msmrd2.integrators.particleList([part1,part2])"
    ]
   },
   {
