--- a/examples/odLangevinMarkovSwitch.ipynb
+++ b/examples/odLangevinMarkovSwitch.ipynb
@@ -36,11 +36,12 @@
     "# Particle definition\n",
     "ptype = 0\n",
     "pstate = 0\n",
+    "bodytype = 'rigidbody'\n",
     "D = Dlist[pstate]\n",
     "Drot = Drotlist[pstate]\n",
     "position = np.array([1,1,1])\n",
     "orientation = np.array([1,0,0,0])\n",
-    "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, position, orientation)"
+    "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, bodytype, position, orientation)"
    ]
   },
   {
@@ -81,9 +82,9 @@
    "source": [
     "# For a list of particles\n",
     "position2 = np.array([2,2,2])\n",
-    "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, position, orientation)\n",
-    "part2 = msmrd2.particleMS(ptype, pstate, D, Drot, position2, orientation)\n",
-    "partlist = msmrd2.particleMSList([part1,part2])\n",
+    "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, bodytype, position, orientation)\n",
+    "part2 = msmrd2.particleMS(ptype, pstate, D, Drot, bodytype, position2, orientation)\n",
+    "partlist = msmrd2.integrators.particleMSList([part1,part2])\n",
     "# Integrate particle list and print only positions (with integratelist)\n",
     "t = 0\n",
     "timesteps = 50\n",
@@ -93,6 +94,13 @@
     "          .format(intg2.clock, partlist[0].state, str(partlist[0].position), partlist[1].state, str(partlist[1].position)))\n",
     "    intg2.integrateList(partlist)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
