Dipole potential WORKING
F-WORKINGgit add include/potentials/dipole.hpp src/potentials/dipole.cpp

--- a/examples/odLangevin.ipynb
+++ b/examples/odLangevin.ipynb
@@ -19,7 +19,7 @@
     "# Particle definition\n",
     "D = 1\n",
     "Drot = 1\n",
-    "bodytype = 'rigidbody'\n",
+    "bodytype = 'rigidsolid'\n",
     "position = np.array([1,1,1])\n",
     "position2 = np.array([2,2,2])\n",
     "orientation = np.array([1,0,0,0])\n",
