--- a/examples/odLangevinMarkovSwitch.ipynb
+++ b/examples/odLangevinMarkovSwitch.ipynb
@@ -36,7 +36,7 @@
     "# Particle definition\n",
     "ptype = 0\n",
     "pstate = 0\n",
-    "bodytype = 'rigidbody'\n",
+    "bodytype = 'rigidsolid'\n",
     "D = Dlist[pstate]\n",
     "Drot = Drotlist[pstate]\n",
     "position = np.array([1,1,1])\n",
@@ -94,6 +94,20 @@
     "          .format(intg2.clock, partlist[0].state, str(partlist[0].position), partlist[1].state, str(partlist[1].position)))\n",
     "    intg2.integrateList(partlist)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
