--- a/examples/odLangevin.ipynb
+++ b/examples/odLangevin.ipynb
@@ -92,7 +92,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
