--- a/examples/dipole.ipynb
+++ b/examples/dipole.ipynb
@@ -7,7 +7,26 @@
    "outputs": [],
    "source": [
     "import msmrd2\n",
-    "import numpy as np"
+    "import msmrd2.visualization as msmrdvis\n",
+    "import numpy as np\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define continuous-time MSM\n",
+    "MSMtype = 1\n",
+    "ratematrix = np.array([[-3.0,3.0],[1.5,-1.5]])\n",
+    "seed = 0 # Seed = -1 used random device as seed\n",
+    "ctmsm = msmrd2.ctmsm(MSMtype, ratematrix, seed)\n",
+    "Dlist = np.array([0.0, 0.0])\n",
+    "Drotlist = np.array([1.0, 1.0])\n",
+    "ctmsm.setD(Dlist)\n",
+    "ctmsm.setDrot(Drotlist)"
    ]
   },
   {
@@ -17,13 +36,21 @@
    "outputs": [],
    "source": [
     "# Particle definition\n",
-    "D = 1\n",
-    "Drot = 0.05\n",
     "bodytype = 'rod'\n",
-    "position = np.array([1,1,1])\n",
     "orientation = np.array([1,0,0,0])\n",
-    "part1 = msmrd2.particle(D, Drot, bodytype, position, orientation)\n",
-    "part1.setOrientVector(np.array([1.,0.,0.]))"
+    "particlelist = []\n",
+    "# Create a grid of particles\n",
+    "for i in range(6):\n",
+    "    for j in range(6): \n",
+    "        position = np.array([i-2.5,j-2.5,0])\n",
+    "        state = np.random.randint(0,2)\n",
+    "        part = msmrd2.particleMS(MSMtype, state, Dlist[state], Drotlist[state], bodytype, position, orientation)   \n",
+    "        orientVector = np.random.normal(0,1,3)\n",
+    "        orientVector = orientVector/np.linalg.norm(orientVector)\n",
+    "        part.setOrientVector(orientVector)\n",
+    "        particlelist.append(part)\n",
+    "# Define list object that can be read by pybound functions\n",
+    "partlist = msmrd2.integrators.particleMSList(particlelist)"
    ]
   },
   {
@@ -32,11 +59,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Over-damped Langevin integrator definition\n",
+    "# Over-damped Langevin integrator with Markovian Switch definition\n",
     "dt = 0.001\n",
-    "seed = 0 # Seed = -1 used random device as seed\n",
+    "seed = -1 # Seed = -1 used random device as seed\n",
     "rotation = True\n",
-    "intg = msmrd2.integrators.odLangevin(dt, seed, rotation)"
+    "intg = msmrd2.integrators.odLangevinMarkovSwitch(ctmsm, dt, seed, rotation)"
    ]
   },
   {
@@ -46,12 +73,10 @@
    "outputs": [],
    "source": [
     "# Define and set potential\n",
-    "scalefactor = 100.0\n",
-    "Efieldvector = np.array([0,0,1])\n",
+    "scalefactor = 30.0\n",
+    "Efieldvector = np.array([0,1,0])\n",
     "dipolePot = msmrd2.potentials.dipole(scalefactor, Efieldvector)\n",
-    "intg.setExternalRodPotential(dipolePot)\n",
-    "#gauss3Dpot = msmrd2.potentials.gaussians3D(15,3,20,-1)\n",
-    "#intg.setExternalPotential(gauss3Dpot)"
+    "intg.setExternalRodPotential(dipolePot)"
    ]
   },
   {
@@ -60,13 +85,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Integrate only one particle and print position and orientation\n",
-    "t = 0\n",
-    "timesteps = 5000\n",
-    "print('{:<10s}{:<10s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Orientation 1\"))\n",
-    "for i in range(timesteps):\n",
-    "    print('{:<10d}{:<10f}{:<40s}{:<40s}'.format(i, intg.clock, str(part1.position), str(part1.orientvector)))\n",
-    "    intg.integrate(part1)"
+    "# Integrate the particles and save to .dat to plot into VMD\n",
+    "datafile  = open('../data/vmd/odLangevinDipole.xyz', 'w')\n",
+    "timeIters = 10\n",
+    "prevstate = [None] * len(partlist)\n",
+    "for i in range(timeIters):\n",
+    "    #datafile  = open('odLangevinDipole.xyz', 'w')\n",
+    "    datafile.write(str(2*len(partlist)) + '\\n')\n",
+    "    datafile.write(str(0) + '\\n')\n",
+    "    for j, part in enumerate(partlist):\n",
+    "        if part.state != prevstate[j] and prevstate[j] != None:\n",
+    "            part.setOrientVector(-part.orientvector)\n",
+    "        if part.state == 0:\n",
+    "            v0 = part.position\n",
+    "            v1 = v0 + 0.35*part.orientvector\n",
+    "            v2 = v0 - 0.35*part.orientvector\n",
+    "            datafile.write('type_0' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "            datafile.write('type_0' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "        elif part.state == 1:\n",
+    "            v0 = part.position\n",
+    "            v1 = v0 + 0.35*part.orientvector\n",
+    "            v2 = v0 - 0.35*part.orientvector\n",
+    "            datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "            datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "        prevstate[j] = 1*part.state\n",
+    "    intg.integrateList(partlist)\n",
+    "datafile.close()"
    ]
   },
   {
@@ -74,19 +118,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Generate tcl for plotting all frames needs -1 (Note vmd cannot change colors when state \n",
+    "# changes. Check dipole script in vmd_movies for this). Load using vmd -e *.tcl\n",
+    "msmrdvis.generateTCL_dipole(-1,tclfname = \"../data/vmd/odLangevinDipole2vmd.tcl\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Integrate the particle and print data\n",
+    "timeIters = 100\n",
+    "print('{:<10s}{:<10s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Orientation 1\"))\n",
+    "for i in range(timeIters):\n",
+    "    print('{:<10d}{:<10f}{:<40s}{:<40s}'.format(i, intg.clock, str(part.position), str(part.orientation)))\n",
+    "    intg.integrate(part)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
