Implemented pair potential into integrator
NEED TO FIX integrateList for MS particles

--- a/examples/odLangevinMarkovSwitch.ipynb
+++ b/examples/odLangevinMarkovSwitch.ipynb
@@ -81,6 +81,7 @@
    "outputs": [],
    "source": [
     "# For a list of particles\n",
+    "pairInteractions = False\n",
     "position2 = np.array([2,2,2])\n",
     "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, bodytype, position, orientation)\n",
     "part2 = msmrd2.particleMS(ptype, pstate, D, Drot, bodytype, position2, orientation)\n",
@@ -92,7 +93,7 @@
     "for i in range(timesteps):\n",
     "    print('{:<10f}{:^10d}{:<40s}{:^15d}{:<30s}'\n",
     "          .format(intg2.clock, partlist[0].state, str(partlist[0].position), partlist[1].state, str(partlist[1].position)))\n",
-    "    intg2.integrateList(partlist)"
+    "    intg2.integrateList(partlist,pairInteractions)"
    ]
   },
   {
