--- a/examples/odLangevin.ipynb
+++ b/examples/odLangevin.ipynb
@@ -76,18 +76,12 @@
    "source": [
     "# Integrate particle list and print only positions (with integratelist)\n",
     "timesteps = 10\n",
+    "pairInteractions = False\n",
     "print('{:<10s}{:<15s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Position2\"))\n",
     "for i in range(timesteps):\n",
     "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, intg2.clock, str(partlist[0].position), str(partlist[1].position)))\n",
-    "    intg2.integrateList(partlist)"
+    "    intg2.integrateList(partlist, pairInteractions)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
