Integrators can now only accept particles list: done to greatly simplify code

--- a/examples/dipole.ipynb
+++ b/examples/dipole.ipynb
@@ -109,7 +109,7 @@
     "            datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "            datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
     "        prevstate[j] = 1*part.state\n",
-    "    intg.integrateList(partlist)\n",
+    "    intg.integrate(partlist)\n",
     "datafile.close()"
    ]
   },
@@ -132,10 +132,11 @@
    "source": [
     "# Integrate the particle and print data\n",
     "timeIters = 100\n",
+    "part1list = msmrd2.integrators.particleMSList([part])\n",
     "print('{:<10s}{:<10s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Orientation 1\"))\n",
     "for i in range(timeIters):\n",
-    "    print('{:<10d}{:<10f}{:<40s}{:<40s}'.format(i, intg.clock, str(part.position), str(part.orientation)))\n",
-    "    intg.integrate(part)"
+    "    print('{:<10d}{:<10f}{:<40s}{:<40s}'.format(i, intg.clock, str(part1list[0].position), str(part1list[0].orientation)))\n",
+    "    intg.integrate(part1list)"
    ]
   },
   {
