--- a/examples/odLangevin.ipynb
+++ b/examples/odLangevin.ipynb
@@ -35,6 +35,7 @@
    "source": [
     "# Create list of particles to be integrated\n",
     "# Note the particles in the list will be independent from the original ones.\n",
+    "part1list = msmrd2.integrators.particleList([part1])\n",
     "partlist = msmrd2.integrators.particleList([part1,part2])"
    ]
   },
@@ -64,8 +65,8 @@
     "timesteps = 10\n",
     "print('{:<10s}{:<10s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Orientation 1\"))\n",
     "for i in range(timesteps):\n",
-    "    print('{:<10d}{:<10f}{:<40s}{:<40s}'.format(i, intg.clock, str(part1.position), str(part1.orientation)))\n",
-    "    intg.integrate(part1)"
+    "    print('{:<10d}{:<10f}{:<40s}{:<40s}'.format(i, intg.clock, str(part1list[0].position), str(part1list[0].orientation)))\n",
+    "    intg.integrate(part1list)"
    ]
   },
   {
@@ -76,12 +77,18 @@
    "source": [
     "# Integrate particle list and print only positions (with integratelist)\n",
     "timesteps = 10\n",
-    "pairInteractions = False\n",
     "print('{:<10s}{:<15s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Position2\"))\n",
     "for i in range(timesteps):\n",
     "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, intg2.clock, str(partlist[0].position), str(partlist[1].position)))\n",
-    "    intg2.integrateList(partlist, pairInteractions)"
+    "    intg2.integrate(partlist)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
