--- a/examples/odLangevinMarkovSwitch.ipynb
+++ b/examples/odLangevinMarkovSwitch.ipynb
@@ -67,11 +67,13 @@
    "source": [
     "# Integrate only one particle and print position and orientation\n",
     "timesteps = 50\n",
+    "# Need to define a one particle list (note part1 object is not modified when list is modified)\n",
+    "part1list = msmrd2.integrators.particleMSList([part1])\n",
     "print('{:<10s}{:<15s}{:<15s}{:<15s}{:<15s}{:<40s}'.format(\"Iteration\", \"Time\", \"State\", \"D\", \"Drot\", \"Position 1\"))\n",
     "for i in range(timesteps):\n",
     "    print('{:<10d}{:<15f}{:<15d}{:<15f}{:<15f}{:<40s}'\n",
-    "          .format(i, intg.clock, part1.state, part1.D, part1.Drot, str(part1.position)))\n",
-    "    intg.integrate(part1)"
+    "          .format(i, intg.clock, part1list[0].state, part1list[0].D, part1list[0].Drot, str(part1list[0].position)))\n",
+    "    intg.integrate(part1list)"
    ]
   },
   {
@@ -93,7 +95,7 @@
     "for i in range(timesteps):\n",
     "    print('{:<10f}{:^10d}{:<40s}{:^15d}{:<30s}'\n",
     "          .format(intg2.clock, partlist[0].state, str(partlist[0].position), partlist[1].state, str(partlist[1].position)))\n",
-    "    intg2.integrateList(partlist,pairInteractions)"
+    "    intg2.integrate(partlist)"
    ]
   },
   {
