--- a/examples/gayBerne.ipynb
+++ b/examples/gayBerne.ipynb
@@ -57,8 +57,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define boundary\n",
+    "boxBoundary = msmrd2.box(5,5,5,'periodic')\n",
+    "intg.setBoundary(boxBoundary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define Gay Berne potential\n",
-    "gayBerne = msmrd2.potentials.gayBerne(0.5,3.0,-2.0,0.6)\n",
+    "gayBerne = msmrd2.potentials.gayBerne(1.0,5.0,-10.0,0.6)\n",
     "intg.setPairRodPotential(gayBerne)"
    ]
   },
@@ -69,7 +80,7 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 10\n",
+    "timesteps = 100\n",
     "print('{:<10s}{:<15s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Position2\"))\n",
     "for i in range(timesteps):\n",
     "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, intg.clock, str(partlist[0].position), str(partlist[1].position)))\n",
