--- a/examples/gayBerne.ipynb
+++ b/examples/gayBerne.ipynb
@@ -18,15 +18,24 @@
    "outputs": [],
    "source": [
     "# Define arbitrarily large list of rod-like particles\n",
-    "numparticles = 20\n",
-    "D = 1\n",
-    "Drot = 1\n",
+    "numparticles = 400\n",
+    "boxsize = 70\n",
+    "D = 0.1\n",
+    "Drot = 0.1\n",
     "bodytype = 'rod'\n",
     "pyPartlist = [] \n",
     "for i in range(numparticles):\n",
-    "    position = np.array([2*np.random.rand()-1,2*np.random.rand()-1,0])\n",
+    "    overlap = True\n",
+    "    while overlap:\n",
+    "        position = np.array([boxsize*np.random.rand()-0.5*boxsize,boxsize*np.random.rand()-0.5*boxsize,0])\n",
+    "        overlap = False\n",
+    "        for j in range(len(pyPartlist)):\n",
+    "            if np.linalg.norm(position - pyPartlist[j].position) < 2.5:\n",
+    "                overlap = True\n",
+    "                break\n",
     "    orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
     "    orientation = orientation/np.linalg.norm(orientation)\n",
+    "    #orientation = np.array([np.cos(np.pi/4.0), np.sin(np.pi/4), 0.0, 0.0]) #Rotate 90 degrees in x axis\n",
     "    part = msmrd2.particle(D, Drot, bodytype, position, orientation)\n",
     "    pyPartlist.append(part)"
    ]
@@ -49,10 +58,11 @@
    "outputs": [],
    "source": [
     "# Over-damped Langevin integrator definition\n",
-    "dt = 0.00005\n",
+    "dt = 0.005\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "rotation = True\n",
-    "intg = msmrd2.integrators.odLangevin(dt, seed, rotation) "
+    "intg = msmrd2.integrators.odLangevin(dt, seed, rotation) \n",
+    "intg.setKbT(0.1)"
    ]
   },
   {
@@ -62,7 +72,7 @@
    "outputs": [],
    "source": [
     "# Define boundary\n",
-    "boxBoundary = msmrd2.box(2,2,0.5,'periodic')\n",
+    "boxBoundary = msmrd2.box(boxsize,boxsize,0.5,'periodic')\n",
     "intg.setBoundary(boxBoundary)"
    ]
   },
@@ -73,7 +83,7 @@
    "outputs": [],
    "source": [
     "# Define Gay Berne potential\n",
-    "gayBerne = msmrd2.potentials.gayBerne(2.0,2.0,-5.0,0.03)\n",
+    "gayBerne = msmrd2.potentials.gayBerne(3.0,4.0,1000.0,1.0)\n",
     "intg.setPairRodPotential(gayBerne)"
    ]
   },
@@ -84,15 +94,15 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 5000\n",
+    "timesteps = 10000\n",
     "datafile  = open('../data/vmd/gayBerne.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    datafile.write(str(2*len(partlist)) + '\\n')\n",
     "    datafile.write(str(0) + '\\n')\n",
     "    for j, part in enumerate(partlist):\n",
     "        v0 = part.position\n",
-    "        v1 = v0 + 0.2*part.orientvector\n",
-    "        v2 = v0 - 0.2*part.orientvector\n",
+    "        v1 = v0 + 1.7*part.orientvector\n",
+    "        v2 = v0 - 1.7*part.orientvector\n",
     "        datafile.write('type_0' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "        datafile.write('type_0' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
     "    intg.integrate(partlist)\n",
