Fixed bug in GayBerne potential

--- a/examples/gayBerne.ipynb
+++ b/examples/gayBerne.ipynb
@@ -17,17 +17,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define arbitrarily large list of rod-like particles\n",
-    "numparticles = 400\n",
-    "boxsize = 70\n",
-    "D = 0.1\n",
-    "Drot = 0.1\n",
+    "numparticles = 300\n",
+    "boxsize = 25\n",
+    "D = 1.0\n",
+    "Drot = 1.0\n",
     "bodytype = 'rod'\n",
     "pyPartlist = [] \n",
     "for i in range(numparticles):\n",
     "    overlap = True\n",
     "    while overlap:\n",
-    "        position = np.array([boxsize*np.random.rand()-0.5*boxsize,boxsize*np.random.rand()-0.5*boxsize,0])\n",
+    "        position = np.array([boxsize*np.random.rand()-0.5*boxsize,\n",
+    "                             boxsize*np.random.rand()-0.5*boxsize,\n",
+    "                             boxsize*np.random.rand()-0.5*boxsize])\n",
     "        overlap = False\n",
     "        for j in range(len(pyPartlist)):\n",
     "            if np.linalg.norm(position - pyPartlist[j].position) < 2.5:\n",
@@ -58,7 +70,7 @@
    "outputs": [],
    "source": [
     "# Over-damped Langevin integrator definition\n",
-    "dt = 0.005\n",
+    "dt = 0.00001\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "rotation = True\n",
     "intg = msmrd2.integrators.odLangevin(dt, seed, rotation) \n",
@@ -72,7 +84,7 @@
    "outputs": [],
    "source": [
     "# Define boundary\n",
-    "boxBoundary = msmrd2.box(boxsize,boxsize,0.5,'periodic')\n",
+    "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'periodic')\n",
     "intg.setBoundary(boxBoundary)"
    ]
   },
@@ -83,7 +95,7 @@
    "outputs": [],
    "source": [
     "# Define Gay Berne potential\n",
-    "gayBerne = msmrd2.potentials.gayBerne(3.0,4.0,1000.0,1.0)\n",
+    "gayBerne = msmrd2.potentials.gayBerne(3.0,5.0,5.0,1.0)\n",
     "intg.setPairRodPotential(gayBerne)"
    ]
   },
@@ -94,18 +106,23 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 10000\n",
+    "timesteps = 200000\n",
+    "stride = 20\n",
     "datafile  = open('../data/vmd/gayBerne.xyz', 'w')\n",
     "for i in range(timesteps):\n",
-    "    datafile.write(str(2*len(partlist)) + '\\n')\n",
-    "    datafile.write(str(0) + '\\n')\n",
+    "    if i%stride == 0:\n",
+    "        datafile.write(str(2*len(partlist)) + '\\n')\n",
+    "        datafile.write(str(0) + '\\n')\n",
     "    for j, part in enumerate(partlist):\n",
     "        v0 = part.position\n",
     "        v1 = v0 + 1.7*part.orientvector\n",
     "        v2 = v0 - 1.7*part.orientvector\n",
-    "        datafile.write('type_0' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
-    "        datafile.write('type_0' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "        if i%stride == 0:\n",
+    "            datafile.write('type_0' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "            datafile.write('type_0' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
     "    intg.integrate(partlist)\n",
+    "    if i%1000 == 0:\n",
+    "        print(\"Percentage complete: \", 100*i/timesteps, \"%\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
     "msmrdvis.generateTCL_gayBerne(numparticles = numparticles)"
@@ -123,6 +140,35 @@
     "for i in range(timesteps):\n",
     "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, intg.clock, str(partlist[0].position), str(partlist[numparticles-1].position)))\n",
     "    intg.integrate(partlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot potential for aligned and misaligned particles\n",
+    "dist = np.arange(0, 2, 0.01)\n",
+    "pos1 = np.array([[i, 0., 0.] for i in dist])\n",
+    "pos2 = np.array([-3.,0.,0.])\n",
+    "pos3 = np.array([-1.,0.,0.])\n",
+    "or1 = np.array([1.,0.,0.])\n",
+    "or2 = np.array([1.,0.,0.])\n",
+    "or3 = np.array([0.,1.,0.])\n",
+    "or4 = np.array([0.,1.,0.])\n",
+    "Epot_end2end = [gayBerne.evaluate(p1,pos2,or1,or2) for p1 in pos1]\n",
+    "Epot_side2side = [gayBerne.evaluate(p1,pos3,or3,or4) for p1 in pos1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(dist+3, Epot_end2end)\n",
+    "plt.plot(dist+1, Epot_side2side)"
    ]
   },
   {
