Added spherical boundary and refactored boundaries

--- a/examples/gayBerne.ipynb
+++ b/examples/gayBerne.ipynb
@@ -28,8 +28,9 @@
    "outputs": [],
    "source": [
     "# Define arbitrarily large list of rod-like particles\n",
-    "numparticles = 300\n",
-    "boxsize = 25\n",
+    "numparticles = 50\n",
+    "radius = 13\n",
+    "boxsize = 2*radius\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "bodytype = 'rod'\n",
@@ -41,10 +42,13 @@
     "                             boxsize*np.random.rand()-0.5*boxsize,\n",
     "                             boxsize*np.random.rand()-0.5*boxsize])\n",
     "        overlap = False\n",
-    "        for j in range(len(pyPartlist)):\n",
-    "            if np.linalg.norm(position - pyPartlist[j].position) < 2.5:\n",
+    "        if np.linalg.norm(position) > radius:\n",
     "                overlap = True\n",
-    "                break\n",
+    "                continue     \n",
+    "        for j in range(len(pyPartlist)):\n",
+    "            if np.linalg.norm(position - pyPartlist[j].position) < 3.0:\n",
+    "                overlap = True\n",
+    "                continue\n",
     "    orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
     "    orientation = orientation/np.linalg.norm(orientation)\n",
     "    #orientation = np.array([np.cos(np.pi/4.0), np.sin(np.pi/4), 0.0, 0.0]) #Rotate 90 degrees in x axis\n",
@@ -70,7 +74,7 @@
    "outputs": [],
    "source": [
     "# Over-damped Langevin integrator definition\n",
-    "dt = 0.00001\n",
+    "dt = 0.000005\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "rotation = True\n",
     "intg = msmrd2.integrators.odLangevin(dt, seed, rotation) \n",
@@ -84,8 +88,8 @@
    "outputs": [],
    "source": [
     "# Define boundary\n",
-    "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'periodic')\n",
-    "intg.setBoundary(boxBoundary)"
+    "sphericalBoundary = msmrd2.sphere(radius,'reflective')\n",
+    "intg.setBoundary(sphericalBoundary)"
    ]
   },
   {
@@ -106,7 +110,7 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 200000\n",
+    "timesteps = 20000\n",
     "stride = 20\n",
     "datafile  = open('../data/vmd/gayBerne.xyz', 'w')\n",
     "for i in range(timesteps):\n",
@@ -122,10 +126,22 @@
     "            datafile.write('type_0' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
     "    intg.integrate(partlist)\n",
     "    if i%1000 == 0:\n",
-    "        print(\"Percentage complete: \", 100*i/timesteps, \"%\")\n",
+    "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_gayBerne(numparticles = numparticles)"
+    "msmrdvis.generateTCL_gayBerne(numparticles = numparticles)\n",
+    "print(\"Percentage complete: \", 100, \" %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(partlist)):\n",
+    "    if np.linalg.norm(partlist[i].position) >= radius:\n",
+    "        print (np.linalg.norm(partlist[i].position))"
    ]
   },
   {
