--- a/examples/gayBerne.ipynb
+++ b/examples/gayBerne.ipynb
@@ -28,8 +28,8 @@
    "outputs": [],
    "source": [
     "# Define arbitrarily large list of rod-like particles\n",
-    "numparticles = 50\n",
-    "radius = 13\n",
+    "numparticles = 100\n",
+    "radius = 20\n",
     "boxsize = 2*radius\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
@@ -42,6 +42,7 @@
     "                             boxsize*np.random.rand()-0.5*boxsize,\n",
     "                             boxsize*np.random.rand()-0.5*boxsize])\n",
     "        overlap = False\n",
+    "        # Comment if statement for box boundary\n",
     "        if np.linalg.norm(position) > radius:\n",
     "                overlap = True\n",
     "                continue     \n",
@@ -87,8 +88,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define boundary\n",
+    "# Define boundary (choose either spherical or box)\n",
     "sphericalBoundary = msmrd2.sphere(radius,'reflective')\n",
+    "#boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'periodic')\n",
     "intg.setBoundary(sphericalBoundary)"
    ]
   },
