Implementd reflective boundary for box
generalizex reflect fucntion

--- a/examples/gayBerne.ipynb
+++ b/examples/gayBerne.ipynb
@@ -29,8 +29,8 @@
    "source": [
     "# Define arbitrarily large list of rod-like particles\n",
     "numparticles = 100\n",
-    "radius = 20\n",
-    "boxsize = 2*radius\n",
+    "#radius = 20\n",
+    "boxsize = 35\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "bodytype = 'rod'\n",
@@ -43,9 +43,9 @@
     "                             boxsize*np.random.rand()-0.5*boxsize])\n",
     "        overlap = False\n",
     "        # Comment if statement for box boundary\n",
-    "        if np.linalg.norm(position) > radius:\n",
-    "                overlap = True\n",
-    "                continue     \n",
+    "        #if np.linalg.norm(position) > radius:\n",
+    "        #        overlap = True\n",
+    "        #        continue     \n",
     "        for j in range(len(pyPartlist)):\n",
     "            if np.linalg.norm(position - pyPartlist[j].position) < 3.0:\n",
     "                overlap = True\n",
@@ -89,9 +89,9 @@
    "outputs": [],
    "source": [
     "# Define boundary (choose either spherical or box)\n",
-    "sphericalBoundary = msmrd2.sphere(radius,'reflective')\n",
-    "#boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'periodic')\n",
-    "intg.setBoundary(sphericalBoundary)"
+    "# sphericalBoundary = msmrd2.sphere(radius,'reflective')\n",
+    "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
+    "intg.setBoundary(boxBoundary)"
    ]
   },
   {
