--- a/examples/gayBerne.ipynb
+++ b/examples/gayBerne.ipynb
@@ -199,9 +199,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:msmrd-dev]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-msmrd-dev-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
